src/objects/c2g__codaIntercompanyTransferLineItem__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpintercompanytransfer</customHelpPage>
    <description>Intercompany transfer detail records.</description>
    <fields>
        <fullName>c2g__AccountAnalysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Analysis</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items (Account Analysis)</relationshipLabel>
        <relationshipName>IntercompanyTransferLineItemsForAnalysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items (Account)</relationshipLabel>
        <relationshipName>IntercompanyTransferLineItemsAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items</relationshipLabel>
        <relationshipName>IntercompanyTransferLineItemsBankAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items</relationshipLabel>
        <relationshipName>Intercompany_Transfer_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items</relationshipLabel>
        <relationshipName>Intercompany_Transfer_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items</relationshipLabel>
        <relationshipName>Intercompany_Transfer_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items</relationshipLabel>
        <relationshipName>IntercompanyTransferLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items</relationshipLabel>
        <relationshipName>IntercompanyTransferLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__LineType__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account - Customer</fullName>
                </value>
                <value>
                    <fullName>Account - Vendor</fullName>
                </value>
                <value>
                    <fullName>Bank Account</fullName>
                </value>
                <value>
                    <fullName>General Ledger Account</fullName>
                    <default>true</default>
                    <label>General Ledger Account</label>
                </value>
                <value>
                    <fullName>Product - Purchases</fullName>
                </value>
                <value>
                    <fullName>Product - Sales</fullName>
                </value>
                <value>
                    <fullName>Tax Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ProductAnalysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Analysis</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items (Product Analysis)</relationshipLabel>
        <relationshipName>IntercompanyTransferLineItemsForAnalysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items</relationshipLabel>
        <relationshipName>IntercompanyTransferLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentPaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Intercompany Transfer Line Items</relationshipLabel>
        <relationshipName>IntercompanyTransferLineItemsTaxCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Intercompany Transfer Line Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Intercompany Transfer Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intercompany Transfer Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>